--- a/index.html
+++ b/index.html
@@ -7,444 +7,7 @@
     <link rel="icon" href="Images/origami-bird.png">
     <link rel="stylesheet" href="CSS/portfolio.css">
     <title>Alp Niksarli - Personal Portfolio</title>
-    <style>
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.about a {
-    color: #00ced1;
-    text-decoration: none;
-}
-.about a:hover {
-    color: #255784;
-}
-h1{
-    color: #069a9c;
-    margin-bottom: 30px;
-}
-.navbar .img{
-    height: 30%;
-}
-.navbar .navlist{
-    height: 50%;
-}
-.navbar .contact{
-    height: 20%;
-    margin-top: 35px;
-    align-items: center;
-    display: flex;
-}
-.navbar img{
-    height: 100%;
-    border-radius: 50%;
-}
-.about img{
-    cursor: pointer;
-}
-.about button{
-    border: none;
-    background: white;
-    border-radius: 50%;
-    margin-right: 20px;
-}
-.navbar ul li a{
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 25px;
-}
-.navbar ul li a.active{
-    color: #00ced1;
-    cursor: default;
-}
-.navbar ul li a.active:hover{
-    box-shadow: none;
-}
-.navbar a:hover{
-    color: rgba(255, 255, 255,1);
-}
-.navbar ul{
-    margin-top: 30px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.navbar ul li{
-    display: block;
-    justify-content: space-between;
-    margin: 20px;
-}
-.navlist-list ul{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.navbar{
-    background-color: #031321;
-    float: left;
-    width: 30%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    text-align: center;
-    justify-content: flex-start;
-    padding-top: 2%;
-    box-shadow: black 0px 2px 10px;
-}
-.navbar .contact a{
-    padding: 5px 10px 5px 10px;
-    border: none;
-    color: #2196f3;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 20px;
-    border-radius: 20px;
-    transition: 1.2s;
-}
-.navbar .contact a:hover{
-    color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3;
-}
-.about .contact a{
-    margin-top: 80px;
-    padding: 5px 10px 5px 10px;
-    border: none;
-    color: #2196f3;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 20px;
-    border-radius: 10px;
-    transition: 1.2s;
-}
-.about .contact a:hover{
-    color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3,0 0 40px #2196f3,0 0 80px #2196f3;
-}
-main{
-    width: 70%;
-    float: right;
-}
-main>p {
-    color: #069a9c;
-    font-weight: 800;
-    font-size: 18px;
-}
-section{
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    font-size: 22px;
-}
-.skills {
-    height: 110vh;
-}
-.projects {
-    height: 130vh;
-}
-.container{
-    width: 100%;
-    padding: 10px 50px;
-}
-.about .container {
-    padding: 0;
-}
-.terakki, .robert{
-    width: 100%;
-}
-.block h2{
-    width: 100%;
-    padding: 50px 0 20px 0;
-}
-.skills img{
-    width: 70px;
-    height: 70px;
-}
-.skills .tools {
-    margin-top: 60px;
-}
-.skills .tools ul li{
-    display: inline;
-}
-.about img{
-    width: 55px;
-    height: 55px;
-}
-.about h1, .about p{
-    padding: 0 20px 10px 50px;
-}
-.about h1{
-    font-size: 40px;
-}
-.about p{
-    margin-top: 20px;
-    font-size: 1.5rem;
-    line-height: 2rem;
-}
-.about .social-icons{
-    padding: 40px 20px 10px 50px;
-}
-.block h1{
-    font-size: 40px;
-}
-.block h3{
-    padding: 0px 0 20px 0;
-}
-.block p {
-    line-height: 30px !important;
-}
-.date {
-    float: right; 
-    color: #069a9c; 
-    font-size: 20px;
-    margin-right: 35px;
-}
-.skills ul{
-    list-style: none;
-}
-.skills .workflow li::before{
-    content: "🎯";
-}
-.skills .languages li::before{
-    content: "✅";
-}
-.skills .tool-icons{
-    margin-bottom: 20px;
-}
-.skills h3{
-    margin-top: 36px;
-    margin-bottom: 24px;
-    font-size: 28px;
-}
-.skills img{
-    margin-right: 15px;
-}
-.skills img :nth-child(5){
-    margin:0;
-}
-.skills ul li{
-    margin-bottom: 12px;
-}
-.experience p{
-    font-size: 23px;
-    margin-bottom: 30px;
-    line-height: 30px;
-}
-.experience h2 {
-    padding: 30px 0 10px 0;
-}
-.experience h3 {
-    padding: 0px 0 20px 0;
-}
-.experience a, .projects a{
-    color: #00ced1;
-    text-decoration: none;
-}
-.experience a:hover, .projects a:hover {
-    color: #255784;
-}
-@media (max-height: 750px){
-    .navbar{
-        padding-top: 1.2rem;
-        padding-bottom: 0;
-    }
-    .about, .education, .experience {
-        height: 130vh;
-    }
-    .skills, .projects {
-        height: 200vh;
-    }
-}
-@media (max-height: 650px) {
-    .about, .education, .experience {
-        height: 150vh;
-    }
-    .skills, .projects {
-        height: 220vh;
-    }
-}
-@media (max-height:580px){
-    .navbar{
-        padding: 0;
-        height: 10%;
-        width: 100%;
-    }
-    .navbar .navlist{
-        width: 100%;
-        height: 0%;
-        display: flex;
-        flex-direction: row;
-    }
-    .navbar ul{
-        padding-top: 0.7%;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-    }
-    .navbar ul li{
-        padding: 0;
-        margin: 0;
-        line-height: 100%;
-    }
-    .navbar .contact a{
-        display: none;
-    }
-    .navbar img{
-        display: none;
-    }
-    main{
-        width: 100%;
-        float: none;
-    }
-}
-@media (max-width:1050px) {
-    .navbar img {
-        height: 90%;
-    }
-}
-@media (max-width:905px){
-    .about p,.experience p {
-        font-size: 1.2rem;
-    }
-    .navbar{
-        padding: 0;
-        height: 10%;
-        width: 100%;
-    }
-    .navbar .navlist{
-        padding-top: 1%;
-        width: 100%;
-        height: 0%;
-        display: flex;
-        flex-direction: row;
-    }
-    .navbar ul{
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-    }
-    .navbar ul li{
-        padding: 0;
-        margin: 0;
-        line-height: 100%;
-    }
-    .navbar .contact a{
-        display: none;
-    }
-    .navbar img{
-        display: none;
-    }
-    main{
-        width: 100%;
-        float: none;
-    }
-}
-@media (max-width: 750px) {
-    .navlist ul {
-        display: none;
-    }
-    .navlist input {
-        display: none;
-    }
-    .navlist .burger-menu {
-        display: block;
-        position: fixed;
-    }
-    .navlist .checkbox {
-        position: absolute;
-        display: block;
-        height: 26px;
-        width: 32px;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 20px;
-        z-index: 5;
-        opacity: 0;
-        cursor: pointer;
-    }  
-    .navlist .burger-menu {
-        display: block;
-        height: 26px;
-        width: 32px;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 20px;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;  
-    }
-    .burger-menu .line {
-        display: block;
-        height: 4px;
-        width: 100%;
-        border-radius: 10px;
-        background: #fff;
-    }
-    .burger-menu .line1 {
-        transform-origin: 0% 0%;
-        transition: transform 0.4s ease-in-out;  
-    }
-    .burger-menu .line2 {
-        transition: transform 0.2s ease-in-out;
-    }
-    .burger-menu .line3 {
-        transform-origin: 0% 100%;
-        transition: transform 0.4s ease-in-out;
-    }
-    .navlist input[type="checkbox"]:checked ~ .burger-menu .line1 {
-      transform: rotate(45deg);
-    }
-    .navlist input[type="checkbox"]:checked ~ .burger-menu .line2 {
-      transform: scaleY(0);
-    }
-    .navlist input[type="checkbox"]:checked ~ .burger-menu .line3 {
-      transform: rotate(-45deg);
-    }
-    .navlist input[type="checkbox"]:checked .navlist ul {
-        display: block;
-    }
-}
-.navlist input {
-    display: none;
-}
-.showBlock {
-    display: block !important;
-}
-.full-menu {
-    height: 100vh;
-    width: 100%;
-}
-.toggle-menu {
-    height: 80% !important;
-    width: 100% !important;
-    display: flex !important;
-    flex-direction: column !important;
-    position: fixed !important;
-    top: 0;
-}
-.button-menu {
-    height: 20% !important;
-    width: 100% !important;
-    display: flex !important;
-    justify-content: center;
-    position: fixed;
-    bottom: 0;
-}
-    </style>
+    <meta name="author" content="Alp Niksarli">
 </head>
 <body>
     <nav>
