--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the personal portfolio website of Alp Niksarli. You can view Alp Niksarli's, mine, portfolio on this website.">
     <link rel="icon" href="Images/origami-bird.png">
-    <link rel="stylesheet" href="CSS/portfolio.css">
+    <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     <title>Alp Niksarli - Personal Portfolio</title>
     <meta name="author" content="Alp Niksarli">
 </head>
