fixed society spelling

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <div class="robert block">
                     <h2>Robert College <span class="date">2018-2023</span></h2>
                     <h3>Besiktas, Ulus</h3>
-                    <p>Activities and socities: <span style="color: grey;">RC Web Development Club, RC Makers, RC Artificial Intelligence Club, RC Table Tennis Team, Volunteering</span></p>
+                    <p>Activities and societies: <span style="color: grey;">RC Web Development Club, RC Makers, RC Artificial Intelligence Club, RC Table Tennis Team, Volunteering</span></p>
                 </div>
                 <div class="terakki block">
                     <h2>Sisli Terakki <span class="date">2012-2018</span></h2>
                     <h3>Besiktas, Levent</h3>
-                    <p>Activities and socities: <span style="color: grey;">Table Tennis Team</span></p>
+                    <p>Activities and societies: <span style="color: grey;">Table Tennis Team</span></p>
                 </div>
             </div>
         </section>
