--- a/index.html
+++ b/index.html
@@ -52,30 +52,35 @@
         <section class="education" id="education">
             <div class="container">
                 <h1>Education</h1>
+                <div class="davidson block">
+                    <h2>Davidson College <span class="date">2023-2027(expected)</span></h2>
+                    <h3>Davidson, NC</h3>
+                    <p>Activities and societies: <span style="color: grey;">Hack@Davidson, Bonner Scholars, Data CATS, C2i, Cats' Stats</span></p>
+                </div>
                 <div class="robert block">
                     <h2>Robert College <span class="date">2018-2023</span></h2>
                     <h3>Besiktas, Ulus</h3>
                     <p>Activities and societies: <span style="color: grey;">RC Web Development Club, RC Makers, RC Artificial Intelligence Club, RC Table Tennis Team, Volunteering</span></p>
-                </div>
-                <div class="terakki block">
-                    <h2>Sisli Terakki <span class="date">2012-2018</span></h2>
-                    <h3>Besiktas, Levent</h3>
-                    <p>Activities and societies: <span style="color: grey;">Table Tennis Team</span></p>
                 </div>
             </div>
         </section>
         <section class="experience" id="experience">
             <div class="container">
                 <h1>Experience</h1>
+                <div class="hurthub block">
+                    <h2>Data Consultant & Web Developer <span class="date">September 2023 - Present</span></h2>
+                    <h3><a target="_blank" href="https://hurthub.davidson.edu/">Hurt Hub@Davidson</a></h3>
+                    <p class="explanation">Provide data-related services 4-6 hours a week, along with preparing programming cheat sheets for faculty members. Develop website of a local business to accelerate the launch, after being admitted as a gig-hub consultant.</p>
+                </div>
                 <div class="fiverr block">
-                    <h2>Python Developer Freelancer <span class="date">October 2021 - Present</span></h2>
+                    <h2>Python Developer Freelancer <span class="date">June 2021 - August 2023</span></h2>
                     <h3><a target="_blank" href="https://www.fiverr.com/alpnix">Fiverr</a></h3>
-                    <p class="explanation">I have worked with over 50 clients and successfully completed 100+ of projects, getting a 5 star review from each of my orders.</p>
+                    <p class="explanation">Worked with over 50 clients and successfully completed 100+ of projects, getting a 5 star review from each order.</p>
                 </div>
                 <div class="magfi block">
-                    <h2>AI Intern <span class="date">August 2021 - Present</span></h2>
+                    <h2>AI Intern <span class="date">September 2021 - March 2022</span></h2>
                     <h3><a target="_blank" href="https://www.magfi.co">Magfi</a></h3>
-                    <p class="explanation">I developed a natural language processing algorithm to analyze users' sentiments. I've worked on migrating our database into ElasticSearch, utilizing Python scripts.</p>
+                    <p class="explanation">Developed a natural language processing algorithm to analyze users' sentiments. Worked on migrating our database into ElasticSearch, utilizing Python scripts.</p>
                 </div>
             </div>
         </section>
@@ -108,6 +113,7 @@
                     <ul>
                         <li>Turkish: Native</li>
                         <li>English: Professional working proficiency</li>
+                        <li>Spanish: Limited working proficiency</li>
                         <li>German: Limited working proficiency</li>
                     </ul>
                 </div>
@@ -123,12 +129,12 @@
                 </div>
                 <div class="biolob block">
                     <h2>Biolob <span class="date">July 2021 - August 2021</span></h2>
-                    <h3><a target="_blank" href="http://biolob.herokuapp.com/">Visit Project</a></h3>
+                    <h3><a target="_blank" href="https://github.com/alpnix/biolob">Visit Project</a></h3>
                     <p class="explanation">I developed Biolob as a final project to the Limitless Makers Tech and Entrepreneurship Summer Program I attended. Biolob aims to give online psychological therapy through its chatbot and other services yet to come.</p>
                 </div>
                 <div class="chat block">
                     <h2>ChatApp <span class="date">February 2021</span></h2>
-                    <h3><a target="_blank" href="http://alpnix-chatapp.herokuapp.com/">Visit Project</a></h3>
+                    <h3><a target="_blank" href="https://github.com/alpnix/ChatApp">Visit Project</a></h3>
                     <p class="explanation">ChatApp is a multi room web based chatting application that is inspired by WhatsApp.</p>
                 </div>
             </div>
