--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   </div>  
                   </div>
             <div class="contact">
-                <a download="alp-niksarli-cv" href="cv.pdf">Download CV</a>
+                <a download="alp-niksarli-resume" href="resume.pdf">Download Resume</a>
             </div>
         </div>
     </nav>
