--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <h1 class="name"><span style="color: black;" class="surname">Alp</span> Niksarli</h1>
                 <p class="address" style="font-size: 23px;">Davidson, NC - <span style="color: #ACA9A9;">(704) 490-0246</span> - <a href="mailto:alniksarli@davidson.edu">alniksarli@davidson.edu</a></p>
-                <p class="aboutme" style="padding-top: 17px;">I'm a freshman Davidson College student, interested in full stack development, data science and entrepreneurship. I aim to develop a tech based product that will have a positive impact in many lives.</p>
+                <p class="aboutme" style="padding-top: 17px;">I'm a freshman Computer Science student at Davidson College. Interested in full stack development, data science and entrepreneurship. I aim to work with a team to develop a tech based product that will have a positive impact in many lives.</p>
                 <div class="social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/alp-niksarli-943a75206/"><button><img  src="Images/linkedin.png" alt="face"></button></a>
                     <a target="_blank" href="https://github.com/alpnix"><button><img src="Images/github.png" alt="github"></button></a>
@@ -139,7 +139,7 @@
             </div>
         </section>
         <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
-        <br>
+        <br><br>
         <p style="text-align: center">&copy 2024 by Alp Niksarli</p>
         <br>
     </main>
