added desktop support along with minor content udpate

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <h1 class="name"><span style="color: black;" class="surname">Alp</span> Niksarli</h1>
                 <p class="address" style="font-size: 23px;">Davidson, NC - <span style="color: #ACA9A9;">(704) 490-0246</span> - <a href="mailto:alniksarli@davidson.edu">alniksarli@davidson.edu</a></p>
-                <p class="aboutme" style="padding-top: 17px;">I'm a freshman Computer Science student at Davidson College. Interested in full stack development, data science and entrepreneurship. I aim to work with a team to develop a tech based product that will have a positive impact in many lives.</p>
+                <p class="aboutme" style="padding-top: 17px;">I'm a freshman Computer Science student at Davidson College interested in full stack development, data science and entrepreneurship. I aim to work with a team to develop a tech based product that will have a positive impact in many lives.</p>
                 <div class="social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/alp-niksarli-943a75206/"><button><img  src="Images/linkedin.png" alt="face"></button></a>
                     <a target="_blank" href="https://github.com/alpnix"><button><img src="Images/github.png" alt="github"></button></a>
@@ -72,8 +72,8 @@
                     <p class="explanation">Provide data-related services 4-6 hours a week, along with preparing programming cheat sheets for faculty members. Develop website of a local business to accelerate the launch, after being admitted as a gig-hub consultant.</p>
                 </div>
                 <div class="fiverr block">
-                    <h2>Python Developer Freelancer <span class="date">June 2021 - August 2023</span></h2>
-                    <h3><a target="_blank" href="https://www.fiverr.com/alpnix">Fiverr</a></h3>
+                    <h2>Freelance Python Developer <span class="date">June 2021 - August 2023</span></h2>
+                    <h3><a target="_blank" href="https://www.fiverr.com/alpnix">Fiverr (My profile)</a></h3>
                     <p class="explanation">Worked with over 50 clients and successfully completed 100+ of projects, getting a 5 star review from each order.</p>
                 </div>
                 <div class="magfi block">
@@ -102,9 +102,9 @@
                     <h3>Workflow</h3>
                     <ul>
                         <li>Artificial Intelligence</li>
-                        <li>Backend Web Development</li>
+                        <li>Backend Development</li>
                         <li>Data Scraping/Analysis</li>
-                        <li>Frontend Web Development</li>
+                        <li>Frontend Development</li>
                     </ul>
                 </div>
                 <div class="languages">
