updated image paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the personal portfolio website of Alp Niksarli. You can view Alp Niksarli's, mine, portfolio on this website.">
-    <link rel="icon" href="Images/origami-bird.png">
+    <link rel="icon" href="images/origami-bird.png">
     <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     <title>Alp Niksarli - Personal Portfolio</title>
     <meta name="author" content="Alp Niksarli">
@@ -42,9 +42,9 @@
                 <p class="address" style="font-size: 23px;">Davidson, NC - <span style="color: #ACA9A9;">(704) 490-0246</span> - <a href="mailto:alniksarli@davidson.edu">alniksarli@davidson.edu</a></p>
                 <p class="aboutme" style="padding-top: 17px;">I'm a freshman Computer Science student at Davidson College interested in full stack development, data science and entrepreneurship. I aim to work with a team to develop a tech based product that will have a positive impact in many lives.</p>
                 <div class="social-icons">
-                    <a target="_blank" href="https://www.linkedin.com/in/alp-niksarli-943a75206/"><button><img  src="Images/linkedin.png" alt="face"></button></a>
-                    <a target="_blank" href="https://github.com/alpnix"><button><img src="Images/github.png" alt="github"></button></a>
-                    <a target="_blank" href="https://www.instagram.com/alpniksarli/"><button><img src="Images/instagram.png" alt="insta"></button></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/alp-niksarli-943a75206/"><button><img  src="images/linkedin.png" alt="face"></button></a>
+                    <a target="_blank" href="https://github.com/alpnix"><button><img src="images/github.png" alt="github"></button></a>
+                    <a target="_blank" href="https://www.instagram.com/alpniksarli/"><button><img src="images/instagram.png" alt="insta"></button></a>
                 </div>
             </div>
         </section>
@@ -90,11 +90,11 @@
                     <h3>Programming Tools</h3>
                     <div class="tool-icons">
                         <ul>
-                            <li><img src="Images/python.png" alt="Python programming language"></li>
-                            <li><img src="Images/javascript.png" alt="JavaScript programming language"></li>
-                            <li><img src="Images/django.png" alt="Django web framework"></li>
-                            <li><img src="Images/tensorflow.png" alt="TensorFlow"></li>
-                            <li><img src="Images/git.png" alt="Git and GitHub"></li> 
+                            <li><img src="images/python.png" alt="Python programming language"></li>
+                            <li><img src="images/javascript.png" alt="JavaScript programming language"></li>
+                            <li><img src="images/django.png" alt="Django web framework"></li>
+                            <li><img src="images/tensorflow.png" alt="TensorFlow"></li>
+                            <li><img src="images/git.png" alt="Git and GitHub"></li> 
                         </ul>
                     </div>
                 </div>
